--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "./build/"
+  "homepage": "http://ghgfhfg2.github.io/react-router"
 }
